--- a/com.groskleg.plexserverd.plist
+++ b/com.groskleg.plexserverd.plist
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" 
-    "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>Label</key>
-<string>com.plex.pms</string>
-<key>KeepAlive</key>
-<true/>
-<key>ProgramArguments</key>
-<array>
-<string>/Applications/Plex\ Media\ Server.app/Contents/MacOS/Plex\ Media\ Server</string>
-</array>
-<key>RunAtLoad</key>
-<true/>
-<key>UserName</key>
-<string>__USERNAME__</string>
-<key>WorkingDirectory</key>
-<string>/Applications</string>
-<key>ServiceDescription</key>
-<string>PMS</string>
+	<key>GroupName</key>
+	<string>_plex</string>
+	<key>InitGroups</key>
+	<false/>
+	<key>KeepAlive</key>
+	<dict>
+		<key>SuccessfulExit</key>
+		<false/>
+	</dict>
+	<key>Label</key>
+	<string>com.groskleg.plexserverd</string>
+	<key>ProgramArguments</key>
+	<array>
+		<string>/Applications/Plex Media Server.app/Contents/MacOS/Plex Media Server</string>
+	</array>
+	<key>ProcessType</key>
+	<string>Interactive</string>
+	<key>RunAtLoad</key>
+	<true/>
+	<key>Sockets</key>
+	<dict>
+		<key>sock1</key>
+		<array>
+			<dict/>
+		</array>
+	</dict>
+	<key>StandardErrorPath</key>
+	<string>/var/log/services/daemons/com.groskleg.plexserverd.err</string>
+	<key>StandardOutPath</key>
+	<string>/var/log/services/daemons/com.groskleg.plexserverd.out</string>
+	<key>UserName</key>
+	<string>_plex</string>
 </dict>
 </plist>
