--- a/com.boot2plex.plexserverd.plist
+++ b/com.boot2plex.plexserverd.plist
@@ -11,6 +11,10 @@
 		<key>SuccessfulExit</key>
 		<false/>
 	</dict>
+	<key>LimitLoadToSessionType</key>
+	<array>
+		<string>Aqua</string>
+	</array>
 	<key>Label</key>
 	<string>com.boot2plex.plexserverd</string>
 	<key>ProgramArguments</key>
